@@ -24,6 +24,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|AbstractList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|ArrayList
 import|;
 end_import
@@ -100,6 +110,136 @@ specifier|public
 class|class
 name|DebugInfo
 block|{
+DECL|class|ChildRollupDocs
+specifier|private
+specifier|static
+specifier|final
+class|class
+name|ChildRollupDocs
+extends|extends
+name|AbstractList
+argument_list|<
+name|SolrInputDocument
+argument_list|>
+block|{
+DECL|field|delegate
+specifier|private
+name|List
+argument_list|<
+name|SolrInputDocument
+argument_list|>
+name|delegate
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Override
+DECL|method|get
+specifier|public
+name|SolrInputDocument
+name|get
+parameter_list|(
+name|int
+name|index
+parameter_list|)
+block|{
+return|return
+name|delegate
+operator|.
+name|get
+argument_list|(
+name|index
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|size
+specifier|public
+name|int
+name|size
+parameter_list|()
+block|{
+return|return
+name|delegate
+operator|.
+name|size
+argument_list|()
+return|;
+block|}
+DECL|method|add
+specifier|public
+name|boolean
+name|add
+parameter_list|(
+name|SolrInputDocument
+name|e
+parameter_list|)
+block|{
+name|SolrInputDocument
+name|transformed
+init|=
+name|e
+operator|.
+name|deepCopy
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|transformed
+operator|.
+name|hasChildDocuments
+argument_list|()
+condition|)
+block|{
+name|ChildRollupDocs
+name|childList
+init|=
+operator|new
+name|ChildRollupDocs
+argument_list|()
+decl_stmt|;
+name|childList
+operator|.
+name|addAll
+argument_list|(
+name|transformed
+operator|.
+name|getChildDocuments
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|transformed
+operator|.
+name|addField
+argument_list|(
+literal|"_childDocuments_"
+argument_list|,
+name|childList
+argument_list|)
+expr_stmt|;
+name|transformed
+operator|.
+name|getChildDocuments
+argument_list|()
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|delegate
+operator|.
+name|add
+argument_list|(
+name|transformed
+argument_list|)
+return|;
+block|}
+block|}
 DECL|field|debugDocuments
 specifier|public
 name|List
@@ -109,11 +249,8 @@ argument_list|>
 name|debugDocuments
 init|=
 operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-literal|0
-argument_list|)
+name|ChildRollupDocs
+argument_list|()
 decl_stmt|;
 DECL|field|debugVerboseOutput
 specifier|public
